# BrakingBad_BFMC2025

./: README.md
control/: CMakeLists.txt
control/include/controllers/: Velocity_controller.hpp
control/src/controllers/: Steering_controller.cpp  Velocity_controller.cpp  s_PID_params.txt  v_PID_params.txt
monitoring/: Readme.md
src/Brain/: historyFile.txt  main.py  output_video1741110313.4927.avi  output_video1741110332.6911714.avi  output_video1741170090.306233.avi  output_video1741170288.85528.avi  output_video1741205984.1996703.avi  requirement.txt  test_webcam.py
src/Brain/picamera_calibration/: calib.py  calibration.npz  capture.py
src/Brain/src/CV/: annotated_video.avi  lane_detector.py  real_time_detection.py  recording_picamera.py  video_yolo_detection.py
src/Brain/v/: pyvenv.cfg
src/Brain/videos/: output_video1741110316.507846.avi  output_video1741110320.5588245.avi  output_video1741169952.5839155.avi  output_video1741170016.6913054.avi  output_video1741170181.5005064.avi  output_video1741170335.6659508.avi  output_video1741170611.8537192.avi  roi-1.avi
src/Embedded/include/brain/: klmanager.hpp
src/Embedded/include/periodics/: imu.hpp
src/Embedded/source/brain/: klmanager.cpp  robotstatemachine.cpp
src/Embedded/source/periodics/: alerts.cpp  imu.cpp  (+2 more)
src/Embedded_Platform/include/: main.hpp
src/Embedded_Platform/newComponent/: newComponent.py
src/Embedded_Platform/source/: main.cpp
src/control/: README.md  package.xml
src/control/config/: steer_PID_params.yaml
src/control/src/: manual_command_node.cpp  overseer_node.cpp
(+885 files in other folders)
